--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,31 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.RowH4HelpDesk
+{
+  text-align: center;
+  padding: 8%;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.FirstPart
+{
+  color: #f9607e;
+}
+
+h1.TitleLeft {
+  margin: 10px;
+  font-size: 2.2rem;
+  font-weight: 700;
+  color: #4b56c0;
+}
+
+.HelpDeskSvg
+{
+  max-width: 40%;
+  margin: auto;
+  display: block;
 }
