--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html,body,div#root
+{
+  height: 100%;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -33,4 +37,13 @@ h1.TitleLeft {
   max-width: 40%;
   margin: auto;
   display: block;
+}
+
+.OmbreDuFormulaire {
+  width: 90%;
+  display: block;
+  margin: auto;
+  margin-bottom: 40px;
+  box-shadow: 6px 6px 30px #4b56c0;
+  background: #4b56c0;
 }
