--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,48 @@
     transform: rotate(360deg);
   }
 }
+
+
+.inscription {
+  background-color: #4c56c0;
+  color: white;
+  width: 50%;
+}
+
+.name {
+  width: 50%;
+  display: -webkit-box;
+  text-align: left;
+}
+
+.text-forget {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
+
+.input-group {
+  color: #0e1a81;
+}
+
+Button.btn- {
+  border-radius: 55px;
+}
+
+span.icon-font {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+.icons-font {
+  margin: 3px;
+  width: 40px;
+  height: 40px;
+  color: rgb(254, 254, 255);
+  display: inline-flex;
+  align-items: baseline;
+  justify-content: flex-end;
+  overflow: hidden;
+  cursor: pointer;
+}
