--- a/src/App.css
+++ b/src/App.css
@@ -37,11 +37,16 @@
   }
 }
 
+.title {
+  display: block;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
 .inscription {
   background-color: #4c56c0;
   color: white;
-  width: 50%;
+  width: 100%;
 }
 
 .name {
@@ -59,25 +64,4 @@
 
 .input-group {
   color: #0e1a81;
-}
-
-Button.btn- {
-  border-radius: 55px;
-}
-
-span.icon-font {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-}
-.icons-font {
-  margin: 3px;
-  width: 40px;
-  height: 40px;
-  color: rgb(254, 254, 255);
-  display: inline-flex;
-  align-items: baseline;
-  justify-content: flex-end;
-  overflow: hidden;
-  cursor: pointer;
 }
